--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to my Game Development Project page
+Describtion: This is my personal game development project page and will document my personal and group projects. 
