--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 title: Welcome to my Game Development Project page
 Describtion: This is my personal game development project page and will document my personal and group projects. 
